--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -4,12 +4,12 @@
             <button class="expand-btn">+</button>
             <div class="exercise-info">
                 <span class="exercise-title">[EXERCISE_NAME]</span>
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.kettlebellkings.com%2Fblogs%2Fdefault-blog%2Ftypes-of-deadlift-workouts&psig=AOvVaw3JGF6vLrlndQszQCFQoQpY&ust=1696288094778000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCNCvq9z71YEDFQAAAAAdAAAAABAE" alt="[EXERCISE_NAME] image" class="exercise-img"/>
+                <img src="https://www.kettlebellkings.com/cdn/shop/articles/barbell-deadlift-movement.gif?v=1692228918&width=700" alt="[EXERCISE_NAME] image" class="exercise-img"/>
             </div>
         </div>
-        <span class="completed-indicator">Completed</span>
+        <span class="completed-indicator"></span>
     </div>
     <div class="sets">
-        <!-- [SETS] -->
+        <!--[SETS]-->
     </div>
 </div>
