fixxing the java, still need to fix chat, and button colors

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         
         <!-- Main Content -->
         <div class="container mt-5">
-            <h1>Welcome to FitClub, {{ username }}!</h1>
+            <h1>Welcome to FitClub, {{ user_data.user_name }}!</h1>
             <!-- User Info and Workouts Section -->
             <div id="workoutPlan">
                 <div id="days">
@@ -47,14 +47,8 @@
                 <div id="workoutsContainer"></div>
             </div>
         </div>
-        
         {% include 'chat.html' %}
         {% include 'footer.html' %}
     </div>
-    <!-- JavaScript -->
-    <script src="{{ url_for('static', filename='app.js') }}"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
